# image-processing-service

./: .env  .gitignore  Cargo.toml  docker-compose.yml
migrations/: 20250726193711_initial_schema.sql
src/: main.rs
src/aws/: mod.rs  s3_client.rs
src/config/: database.rs  mod.rs
src/middleware/: auth.rs  mod.rs
src/models/: image.rs  mod.rs  user.rs
src/repositories/: image.rs  user.rs
src/security/: utils.rs
src/services/: mod.rs  user.rs
