[package]
name = "image_processing_service"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
argon2 = "0.5.3"
aws-config = "1.8.3"
aws-sdk-s3 = "1.100.0"
chrono = { version = "0.4.41", features = ["serde"] }
image = "0.25.6"
rand = "0.9.2"
serde = "1.0.219"
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio", "tls-native-tls", "chrono", "uuid"] }
tokio = { version = "1.46.1", features = ["full"] }
uuid = { version = "1.17.0", features = ["v4", "serde"] }
